--- a/calculadora.html
+++ b/calculadora.html
@@ -9,7 +9,7 @@
   <body onload="init();">
     <table class="calculadora">
       <tr>
-        <td colspan="4"><span id="texto">Calculadora JavaScript/iscjlchavezg.mx Hola chavos esto lo haremos el proximo RA</span></td>
+        <td colspan="4"><span id="texto">Calculadora JavaScript/iscjlchavezg.mx</span></td>
       </tr>
       <tr>
         <td colspan="4"><span id="resultado"></span></td>
